change graph legend

--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -74,7 +74,7 @@
         }
 
         .tab-text-infra.download-rep {
-            display: flex;
+            display: inline-flex;
             align-items: center;
             cursor: pointer;
 
