--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1011,31 +1011,53 @@ ul {
         padding: 14px 12px;
     }
 
-    .heading-blue{font-size: 2em;}
-    .heading-sm{font-size: 22px !important;}
-    .right-card-sec .card-box-impact .impact-box-content .main-text-c.m-big, .right-card-sec .srid-card-se .card-box .main-text-c{font-size: 14px;}
+    .heading-blue {
+        font-size: 2em;
+    }
+
+    .heading-sm {
+        font-size: 22px !important;
+    }
+
+    .right-card-sec .card-box-impact .impact-box-content .main-text-c.m-big,
+    .right-card-sec .srid-card-se .card-box .main-text-c {
+        font-size: 14px;
+    }
+
     .right-card-sec .srid-card-se .card-box .main-text-c.m-big {
         font-size: 22px;
         letter-spacing: 0px;
     }
+
     .right-card-sec .srid-card-se .card-box .sub-text-c {
         font-size: 12px;
     }
+
     .right-card-sec .srid-card-se .card-box img.card-img {
         width: 55px;
         height: 50px;
         right: 16px;
     }
-    .right-card-sec .card-box-impact .impact-box-content .main-text-c, .right-card-sec .card-box-impact .impact-box-content span.sub-text-c {
+
+    .right-card-sec .card-box-impact .impact-box-content .main-text-c,
+    .right-card-sec .card-box-impact .impact-box-content span.sub-text-c {
         font-size: 12px;
     }
+
     .right-card-sec .card-box-impact .impact-box-content span.sub-text-c.sub-main-text {
         font-size: 24px;
         letter-spacing: -1px;
         margin-top: 16px;
     }
-    .tab-for-graph button.view-table-btn{font-size: 10px;padding: 8px 8px 6px;}
-    .header-dropdown-btn{padding: 10px 12px !important;}
+
+    .tab-for-graph button.view-table-btn {
+        font-size: 10px;
+        padding: 8px 8px 6px;
+    }
+
+    .header-dropdown-btn {
+        padding: 10px 12px !important;
+    }
 
 }
 
@@ -1198,7 +1220,10 @@ ul {
             font-size: 12px;
         }
     }
-    .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link{font-size: 12px;}
+
+    .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link {
+        font-size: 12px;
+    }
 
 }
 
@@ -1226,17 +1251,20 @@ table tr {
     box-shadow: none !important;
 }
 
-.ag-checkbox-input-wrapper.ag-checked::after{color: #113689 !important;}
+.ag-checkbox-input-wrapper.ag-checked::after {
+    color: #113689 !important;
+}
 
 .ag-theme-quartz {
-    --ag-cell-horizontal-border: var(--ag-row-border-width)
-    var(--ag-row-border-style) var(--ag-row-border-color); /* Add left and right borders to each cell and use row border's properties  */
-  --ag-header-column-separator-display: block;
+    --ag-cell-horizontal-border: var(--ag-row-border-width) var(--ag-row-border-style) var(--ag-row-border-color);
+    /* Add left and right borders to each cell and use row border's properties  */
+    --ag-header-column-separator-display: block;
 }
 
 rect.highcharts-button-box {
     fill: #f7edd6;
 }
+
 table {
     width: 100%;
 }
@@ -1245,24 +1273,24 @@ table {
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+}
 
-  .ag-side-bar.ag-unselectable.ag-focus-managed.ag-side-bar-right.ag-hidden {
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.ag-side-bar.ag-unselectable.ag-focus-managed.ag-side-bar-right.ag-hidden {
     opacity: 0;
     transform-origin: right;
     transform: rotateY(90deg);
@@ -1271,9 +1299,9 @@ table {
     width: 0;
 }
 
-  .ag-side-bar.ag-unselectable.ag-focus-managed.ag-side-bar-right {
+.ag-side-bar.ag-unselectable.ag-focus-managed.ag-side-bar-right {
     position: relative;
-    background: #fff;    
+    background: #fff;
     width: 300px;
     border-radius: 20px 0px 0px 20px !important;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1019607843);
@@ -1281,12 +1309,22 @@ table {
     transform: rotateY(0deg);
     transition: all 500ms ease-in-out;
 }
-.ag-tool-panel-wrapper{width: 100% !important; 
+
+.ag-tool-panel-wrapper {
+    width: 100% !important;
     background: #fff !important;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1019607843);
 }
-.ag-virtual-list-viewport{padding: 10px !important;transition: all 500ms ease-in-out;}
-.ag-ltr .ag-side-bar-right .ag-selected .ag-side-button-button{border-left: 0px;}
+
+.ag-virtual-list-viewport {
+    padding: 10px !important;
+    transition: all 500ms ease-in-out;
+}
+
+.ag-ltr .ag-side-bar-right .ag-selected .ag-side-button-button {
+    border-left: 0px;
+}
+
 .ag-virtual-list-item {
     position: static;
     width: 100%;
@@ -1296,10 +1334,19 @@ table {
     margin: 8px 0px;
     padding: 5px 15px !important;
 }
+
 .ag-virtual-list-container {
     overflow: visible !important;
     height: 600px !important;
 }
 
-.ag-column-select-header{border-radius: 20px 0px 0px 0px !important;}
-.ag-theme-material .ag-column-panel-column-select, .ag-virtual-list-viewport,.ag-column-panel, .ag-tool-panel-wrapper{border-radius: 20px 0px 0px 20px !important;}
+.ag-column-select-header {
+    border-radius: 20px 0px 0px 0px !important;
+}
+
+.ag-theme-material .ag-column-panel-column-select,
+.ag-virtual-list-viewport,
+.ag-column-panel,
+.ag-tool-panel-wrapper {
+    border-radius: 20px 0px 0px 20px !important;
+}
