--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -54,6 +54,7 @@
             padding: 8px 20px;
             float: right;
             margin-top: 15px;
+            position: static;
 
             @media (max-width:1599px) and (min-width: 1361px) {
                 font-size: 14px;
@@ -211,6 +212,7 @@
                 width: 100%;
                 justify-content: center;
                 font-size: 16px;
+                position: static !important;
                 @media (max-width:1599px) and (min-width: 1024px) {
                     font-size: 14px;
                 }
