--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -967,7 +967,7 @@ ul {
     }
 }
 
-@media (max-width:1699px) and (min-width: 1361px) {
+@media (max-width:1699px) and (min-width: 1400px) {
     body {
         font-size: 14px;
     }
@@ -1061,7 +1061,7 @@ ul {
 
 }
 
-@media (max-width:1360px) and (min-width: 1024px) {
+@media (max-width:1399px) and (min-width: 1024px) {
     body {
         font-size: 12px;
     }
@@ -1224,8 +1224,44 @@ ul {
     .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link {
         font-size: 12px;
     }
-
+    
 }
+
+@media (max-width: 991px) {
+    .infrastructure-main-card .tab-for-graph .customize-btn{
+        float: left;
+        margin-top: 0;
+    }
+    .infrastructure-main-card .tab-for-graph .heading-sm1{margin: 0px;font-size: 18px;}
+    .infrastructure-main-card .tab-for-graph .tab-text-infra.download-rep {
+        padding-left: 12px;
+        padding-top: 10px;
+    }
+    .infrastructure-main-card .tab-for-graph .filter-card{margin-bottom: 15px; padding-bottom: 15px;}
+    .infrastructure-main-card .tab-for-graph .filter-card button.header-dropdown-btn{margin-top: 15px;}
+    .filter-card .col-md-3.col-lg-3{
+        margin-top: 0 !important;
+        margin-bottom: 0px !important;
+        padding-top: 0 !important;
+    }
+    .button-group-filter {
+        padding: 0 !important;
+        margin: 0 !important;
+        margin-top: 15px !important;
+    }
+    p {
+        font-size: 14px;
+    }
+    .ag-side-bar.ag-unselectable.ag-focus-managed.ag-side-bar-right{height: 600px;} 
+    .ag-virtual-list-container {
+        overflow: hidden;
+    }
+    .ag-virtual-list-viewport {
+        overflow: scroll;
+    }
+    
+}
+
 
 a {
     text-decoration: none;
@@ -1359,3 +1395,4 @@ table {
 input[class^=ag-][type=text]:focus {
     border-bottom-color: transparent !important;
 }
+
