--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -464,7 +464,7 @@ button.header-dropdown-btn.open-map-btn {
     left: 50%;
     bottom: 2%;
     transform: translate(-50%, 10px);
-    width: 600px;
+    width: 770px;
     color: #fff;
     border-radius: 0 0 10px 10px;
     padding: 6px;
@@ -498,11 +498,11 @@ opacity: 1;
     
 }
     ul.dropdown-menu.show.animation {
-        width: 600px !important;
+        width: 770px !important;
         left: 0px !important;
         border-radius: 10px 10px 0 0 !important;
         // transform: translate(-68.5%, -28%) !important;
-        transform: translate(-53.3%, -21.9%) !important;
+        transform: translate(-41.3%, -21.9%) !important;
         background: rgba(34, 34, 34, 0.8); 
         /* border-bottom: 2px solid #fff; */
         transition: all 0.5s ease-in-out;
@@ -545,7 +545,15 @@ opacity: 1;
             margin-right: 0px;
 
             ul.dropdown-menu.show.animation{ 
-                transform: translate(-24.7%, -21.9%) !important;
+                transform: translate(-19%, -21.9%) !important;
+            }
+
+        }
+        li.nav-item.position-static:nth-child(3){
+            margin-right: 0px;
+
+            ul.dropdown-menu.show.animation{ 
+                transform: translate(-63.6%, -21%) !important;
             }
 
         }
@@ -553,7 +561,7 @@ opacity: 1;
             margin-right: 0px;
 
             ul.dropdown-menu.show.animation{ 
-                transform: translate(-82%, -21.9%) !important;
+                transform: translate(-86%, -21.9%) !important;
             }
 
         }
