update filter and dark mode

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -273,6 +273,7 @@
         padding: 5px 11px;
         transition: all .3s ease-in-out;
         background: #F7EDD6;
+        text-transform: capitalize;
     }
 
     .nav-tabs .nav-item:not(:last-child) {
