--- a/src/styles/_darkmode.scss
+++ b/src/styles/_darkmode.scss
@@ -5,7 +5,7 @@
     color: #ff0 !important;
    }
    ul li, p,.heading-blue, .heading-sm,.right-card-sec .card-box-impact .impact-box-content .main-text-c,span,.heading-sm1,.form-control,.infrastructure-main-card .tab-for-graph table tr th, table tr td, div, .ag-ltr .ag-cell{color: #fff !important;}
-   .header-top,.header-top-skipwrap ul li a .select-wrap, .site-header,.menu-switch-tab, .header-dropdown-btn,.bg-grey,.main-card-home::after, .filter_drodown .filter-content,.filter_drodown,.filter_drodown .select-box.from-control li.nav-item.position-static,.right-card-sec .srid-card-se,.tab-for-graph .nav-tabs .nav-link,.form-control,table tr th, table tr td,.bg-grey2,.title-brd span.internalpagename,.ag-header-cell, .ag-tool-panel-wrapper{background: #000 !important;}
+   .header-top,.header-top-skipwrap ul li a .select-wrap, .site-header,.menu-switch-tab, .header-dropdown-btn,.bg-grey,.main-card-home::after, .filter_drodown .filter-content,.filter_drodown,.filter_drodown .select-box.from-control li.nav-item.position-static,.right-card-sec .srid-card-se,.tab-for-graph .nav-tabs .nav-link,.form-control,table tr th, table tr td,.bg-grey2,.title-brd span.internalpagename,.ag-header-cell, .ag-tool-panel-wrapper, ul.highcharts-menu{background: #000 !important;}
    input:checked + .slider,.header-top-skipwrap ul li a .select-wrap, .menu-switch-tab,.header-dropdown-btn,.main-card-home::after,.filter_drodown,.filter_drodown .select-box.from-control li.nav-item.position-static,.right-card-sec .srid-card-se, .filter_drodown ul.dropdown-menu.show.animation {border: 1px solid #fff;}
    header.site-header {
     border-top: 1px solid #545050;}
