--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -465,12 +465,25 @@ button.header-dropdown-btn.open-map-btn {
     left: 50%;
     bottom: 2%;
     transform: translate(-50%, 10px);
-    width: 770px;
+    width: 142px;
     color: #fff;
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px;
     padding: 6px;
     display: flex;
     align-items: center;
+    transition: all .7s ease-in-out;
+    // overflow: hidden; 
+
+    &:hover {
+        width: 770px;
+        border-radius: 0 0 10px 10px;
+
+        .select-box.from-control {
+            opacity: 1;
+            transition: all 1.5s ease-in;
+        }
+
+    }
 
     .filter-content {
         display: flex;
@@ -481,7 +494,7 @@ button.header-dropdown-btn.open-map-btn {
         padding: 10px;
         border-radius: 10px;
 
-        h6{
+        h6 {
             background: rgb(62 62 62 / 43%);
             padding: 18px 12px;
             border-radius: 50px;
@@ -489,29 +502,32 @@ button.header-dropdown-btn.open-map-btn {
             font-size: 14px;
         }
     }
-@keyframes smooth {
-    0%{
-        opacity: 0;
+
+    @keyframes smooth {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+
     }
-    100%{
-opacity: 1;
-    }
-    
-}
+
     ul.dropdown-menu.show.animation {
         width: 770px !important;
         left: 0px !important;
         border-radius: 10px 10px 0 0 !important;
         // transform: translate(-68.5%, -28%) !important;
         transform: translate(-41.3%, -21.9%) !important;
-        background: rgba(34, 34, 34, 0.8); 
+        background: rgba(34, 34, 34, 0.8);
         /* border-bottom: 2px solid #fff; */
         transition: all 0.5s ease-in-out;
         padding: 5px;
         animation: smooth .5s ease-in-out;
         z-index: 9999999;
 
-        .droplist{
+        .droplist {
             background: #222;
             padding: 10px 12px;
             border-radius: 10px 10px 0 0 !important;
@@ -541,38 +557,43 @@ opacity: 1;
     }
 
     .select-box.from-control {
+        opacity: 0;
+        transition: all .3s ease-out;
 
-        li.nav-item.position-static:first-child{
+        li.nav-item.position-static:first-child {
             margin-right: 0px;
 
-            ul.dropdown-menu.show.animation{ 
+            ul.dropdown-menu.show.animation {
                 transform: translate(-19%, -21.9%) !important;
             }
 
         }
-        li.nav-item.position-static:nth-child(3){
+
+        li.nav-item.position-static:nth-child(3) {
             margin-right: 0px;
 
-            ul.dropdown-menu.show.animation{ 
+            ul.dropdown-menu.show.animation {
                 transform: translate(-63.6%, -21%) !important;
             }
 
         }
-        li.nav-item.position-static:last-child{
+
+        li.nav-item.position-static:last-child {
             margin-right: 0px;
 
-            ul.dropdown-menu.show.animation{ 
+            ul.dropdown-menu.show.animation {
                 transform: translate(-86%, -21.9%) !important;
             }
 
         }
-        
+
         li.nav-item.position-static {
             border-radius: 50px;
             padding: 0px 12px;
-            background: #fff;       
-            margin-left: 8px;     
+            background: #fff;
+            margin-left: 8px;
         }
+
         a.dropdown-toggle.nav-link {
             padding: 5px 0;
             font-weight: 600;
@@ -592,14 +613,16 @@ opacity: 1;
             }
         }
 
-        li.nav-item.position-static:last-child{
-            a.dropdown-toggle.nav-link{width: 80px;}
+        li.nav-item.position-static:last-child {
+            a.dropdown-toggle.nav-link {
+                width: 80px;
+            }
         }
     }
 
     ul.dropdown-menu.show.animation:after {
         content: '';
-        border-top:20px solid #faf6ed;
+        border-top: 20px solid #faf6ed;
         border-left: 20px solid transparent;
         border-right: 20px solid transparent;
         bottom: 0;
@@ -609,7 +632,7 @@ opacity: 1;
         display: none;
     }
 
-    .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation:after{
+    .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation:after {
         left: 45.5%;
         right: auto;
         transform: translate(-45%, 20px);
@@ -617,27 +640,51 @@ opacity: 1;
     }
 
     /* width */
-::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-  /* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 
 }
 
 .scrollable-container {
-    max-height: 65vh; /* Adjust height as needed */
+    max-height: 65vh;
+    /* Adjust height as needed */
     overflow-y: auto;
+}
+
+
+// small filter dropdown
+
+.filter_drodown.small-filter-box {
+    width: 142px;
+
+    &:hover{
+        width: 500px;
+    }
+
+    .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation {
+        transform: translate(-44%, -21.9%) !important;
+        width: 500px !important;
+    }
+
+    .select-box.from-control li.nav-item.position-static:last-child ul.dropdown-menu.show.animation {
+        transform: translate(-78.5%, -21.9%) !important;
+        width: 500px !important;
+    }
+
 }
