--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -471,7 +471,7 @@ button.header-dropdown-btn.open-map-btn {
     padding: 6px;
     display: flex;
     align-items: center;
-    transition: all .7s ease-in-out;
+    transition: all .5s ease-in-out;
     // overflow: hidden; 
 
     &:hover {
@@ -479,8 +479,15 @@ button.header-dropdown-btn.open-map-btn {
         border-radius: 0 0 10px 10px;
 
         .select-box.from-control {
+            visibility: visible;
             opacity: 1;
             transition: all 1.5s ease-in;
+        }
+
+        ul.dropdown-menu.show.animation{display: block !important;}
+
+        .filter-content{
+            padding: 10px;
         }
 
     }
@@ -491,9 +498,9 @@ button.header-dropdown-btn.open-map-btn {
         justify-content: space-between;
         width: 100%;
         background: #222;
-        padding: 10px;
+        padding: 2px 10px;
         border-radius: 10px;
-
+        transition: all 0.3s ease-in-out;
         h6 {
             background: rgb(62 62 62 / 43%);
             padding: 18px 12px;
@@ -526,7 +533,7 @@ button.header-dropdown-btn.open-map-btn {
         padding: 5px;
         animation: smooth .5s ease-in-out;
         z-index: 9999999;
-
+        display: none;
         .droplist {
             background: #222;
             padding: 10px 12px;
@@ -557,6 +564,7 @@ button.header-dropdown-btn.open-map-btn {
     }
 
     .select-box.from-control {
+        visibility: hidden;
         opacity: 0;
         transition: all .3s ease-out;
 
