--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1087,10 +1087,10 @@ ul {
         transform: translate(-86%, -19.4%) !important
     }
 
-    .header-top-skipwrap ul li a,
-    .header-top-skipwrap ul li span.text {
-        font-size: 0.7em !important;
-    }
+    // .header-top-skipwrap ul li a,
+    // .header-top-skipwrap ul li span.text {
+    //     font-size: 0.7em !important;
+    // }
 
     .site-header .logo-wrap {
         padding: 12px 0 14px;
@@ -1228,6 +1228,10 @@ ul {
 
     .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link {
         font-size: 12px;
+    }
+
+    .filter_drodown.small-filter-box, .filter_drodown {
+        width: 130px;
     }
     
 }
