--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1479,3 +1479,5 @@ h4.brudcrumb_heading {
 .ag-theme-material.ag-theme-custom-height.ag-theme-quartz .ag-side-buttons {
     display: none;
 }
+
+.ag-header-cell-comp-wrapper .ag-header-cell-text{white-space: break-spaces;}
