--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -349,7 +349,7 @@ th.report-name-width-50 {
     white-space: nowrap;
     font-size: 0.875rem;
 }
-.ag-header-cell, .ag-header-group-cell {
+.ag-header-cell, .ag-header-group-cell, .ag-cell {
     padding: 0px 11px !important;
 }
 
