fixed pinned bottom

--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -376,3 +376,7 @@ button.scroll-right-btn .material-icons-round {
     font-size: 35px;
     line-height: 30px;
 }
+
+.ag-floating-bottom-container {
+    font-weight: 700;
+}
