--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -411,3 +411,6 @@ button.scroll-right-btn .material-icons-round {
     font-weight: 700;
 }
 
+.ag-floating-bottom-viewport .ag-cell {
+    text-align: right !important;
+}
