--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -414,3 +414,9 @@ button.scroll-right-btn .material-icons-round {
 .ag-floating-bottom-viewport .ag-cell {
     text-align: right !important;
 }
+.pinnedData{
+    background:#fff;
+    padding:7px;
+    font-weight: 700;
+    font-size: 13px;
+}
