UI CHanges according to new layout

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $black: #000000;
-$light-grey: #F7F7F7;
+$light-grey: #FAFCFF;
 // $red: #D94148;
 $red: #f3372f;
 // $blue: #383876;
