--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 @import 'src/styles/_variables.scss';
 
 .header-top {
-    background-color: $light-grey;
+    background-color: #F7F7F7;
     padding: 6px 0;
     font-family: 'Roboto', sans-serif;
 
