--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -2,12 +2,22 @@
     padding-bottom: 70px;
 
     .tab-for-graph {
+
+        .map-heading-map{
+            span{
+                background: #EBE9FA;
+                font-size: 14px;
+                padding: 8px 10px;
+                border-radius: 50px;
+            }
+        }
+
         .heading-sm1 {
             letter-spacing: 0.14px;
             color: #113689;
-            font-size: 24px;
+            font-size: 23px;
             font-weight: 600;
-            margin: 0 15px 0 0;
+            margin: 15px 15px 0 0;           
 
             @media (max-width:1599px) and (min-width: 1361px) {
                 font-size: 20px;
@@ -22,9 +32,9 @@
             color: #212121;
             font-size: 14px;
             padding: 7px 15px;
-            background: #E2E2E2;
+            background: #ffffff;
             margin-bottom: 8px;
-            border: 1px solid #E2E2E2;
+            border: 1px solid #ffffff;
             margin-right: 0px;
 
             @media (max-width:1599px) and (min-width: 1361px) {
@@ -41,9 +51,11 @@
 
         .nav-tabs .nav-item.show .nav-link,
         .nav-tabs .nav-link.active {
-            color: #ffffff;
-            background-color: #2A2A2A;
-            border-color: #2A2A2A;
+            color: #113689;
+            background-color: #EBE9FA;
+            border-color: #EBE9FA;
+            font-weight: 600;
+            box-shadow: 0px 11px 14px rgb(255 255 255 / 12%);
         }
 
         .customize-btn {
@@ -91,24 +103,27 @@
 
         .report-inner-tab {
             .nav-tabs {
-                background: #fff;
+                background:#F6F7F8;
                 display: inline-flex;
                 padding: 8px 15px;
                 border-radius: 40px;
             }
 
             .nav-tabs .nav-link {
-                background: #fff;
-                border: 1px solid #fff;
+                // background: #fff;
+                // border: 1px solid #fff;
+                background: transparent;
+                border: 1px solid transparent;
                 margin-bottom: 0px;
-                padding: 7px 20px;
+                padding: 7px 15px;
             }
 
             .nav-tabs .nav-item.show .nav-link,
             .nav-tabs .nav-link.active {
-                color: #ffffff;
-                background-color: #113689;
-                border-color: #113689;
+                color: #113689;
+                background-color: #EBE9FA;
+                border-color: #EBE9FA;
+                font-weight: 600;
             }
         }
 
@@ -241,22 +256,28 @@
             align-items: center;
             margin-top: 8px;
 
-            .nav-link{padding: 9px 15px !important;}
+            .nav-link{
+                    padding: 9px 15px !important;  
+                    background: #fff;
+                    border: 1px solid #fff;
+                    box-shadow: 0px 11px 14px #9898981F;        
+            }
 
             .details-multi{display: none;}
 
         .multibtn{
             display: flex;
             padding: 5px 8px;
-            background: #E2E2E2;
+            background: #fff;
             margin-bottom:8px;
-            border: 1px solid #E2E2E2;
+            border: 1px solid #fff;
             border-radius: 50px;
 
                 .nav-link{    
                     margin-bottom: 0px;
                     font-size: 13px;
                     padding: 5px 15px !important;
+                    box-shadow: 0px 11px 14px rgb(255 255 255 / 12%);                    
                 }
                 .details-multi{display: block;}
 
