--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ body {
     font-size: 16px;
     overflow-x: hidden;
     min-height: 100vh;
-    background: #F7F7F7
+    background: #FAFCFF
 }
 
 a {
@@ -951,7 +951,7 @@ ul {
 }
 
 .bg-grey2 {
-    background: #f2f2f2;
+    background: #F6F7F8;
 }
 
 @media (min-width: 1600px) {
