update report page

--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -521,6 +521,7 @@ img.dropicon {
     justify-content: center;
     z-index: 2;
     padding: 25px;
+    display: none;
 
     img.icon-infra {
         opacity: .5;
