--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -453,9 +453,9 @@ button.scroll-right-btn .material-icons-round {
     font-weight: 700;
 }
 
-.ag-floating-bottom-viewport .ag-cell {
-    text-align: right !important;
-}
+// .ag-floating-bottom-viewport .ag-cell {
+//     text-align: right !important;
+// }
 .pinnedData{
     background:#fff;
     padding:7px 15px 20px;
