--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -2,28 +2,36 @@
     padding-bottom: 70px;
     position: relative;
 
-.header-bar{
-    position: relative;
-    .box-circle-r {
-        height: 100%;
-        width: 260px;
-        background: #eff0f0;
-        position: absolute;
-        right: -7%;
-        top: 0;
-        border-radius: 100%;
-    }
+    .header-bar {
+        position: relative;
 
-}
+        .box-circle-r {
+            height: 100%;
+            width: 260px;
+            background: #eff0f0;
+            position: absolute;
+            right: -7%;
+            top: 0;
+            border-radius: 100%;
+        }
+
+    }
 
     .tab-for-graph {
 
-        .map-heading-map{
-            span{
+        .map-heading-map {
+            span {
                 background: #EBE9FA;
-                font-size: 14px;
+                font-size: 13px;
                 padding: 8px 10px;
                 border-radius: 50px;
+                color: #113689;
+                font-weight: 600;
+
+                @media (max-width:1360px) and (min-width: 1024px) {
+                    font-size: 12px !important;
+                    padding: 6px 10px;
+                }
             }
         }
 
@@ -32,14 +40,14 @@
             color: #113689;
             font-size: 23px;
             font-weight: 600;
-            margin: 15px 15px 0 0;           
+            margin: 15px 15px 0 0;
 
             @media (max-width:1599px) and (min-width: 1361px) {
-                font-size: 20px;
+                font-size: 18px !important;
             }
 
             @media (max-width:1360px) and (min-width: 1024px) {
-                font-size: 18px;
+                font-size: 15px !important;
             }
         }
 
@@ -48,7 +56,7 @@
             font-size: 14px;
             padding: 7px 15px;
             background: #ffffff;
-            margin-bottom: 8px;
+            margin-bottom: 4px;
             border: 1px solid #ffffff;
             margin-right: 0px;
 
@@ -59,7 +67,7 @@
 
             @media (max-width:1360px) and (min-width: 1024px) {
                 font-size: 10px;
-                padding: 7px 12px;
+                padding: 5px 10px !important;
             }
 
         }
@@ -119,10 +127,14 @@
 
         .report-inner-tab {
             .nav-tabs {
-                background:#F6F7F8;
+                background: #F6F7F8;
                 display: inline-flex;
                 padding: 8px 15px;
                 border-radius: 40px;
+
+                @media (max-width:1360px) and (min-width: 1024px) {                    
+                    padding: 4px 9px !important;
+                }
             }
 
             .nav-tabs .nav-link {
@@ -170,7 +182,7 @@
             font-weight: 600 !important;
             padding: 12px 15px !important;
             white-space: nowrap;
-            
+
         }
 
         .text-blue {
@@ -245,6 +257,7 @@
                 justify-content: center;
                 font-size: 16px;
                 position: static !important;
+
                 @media (max-width:1599px) and (min-width: 1024px) {
                     font-size: 14px;
                 }
@@ -267,42 +280,81 @@
             }
         }
 
-        .mul-tab-main{
+        .mul-tab-main {
             display: flex;
             align-items: center;
             margin-top: 8px;
 
-            .nav-link{
-                    padding: 9px 15px !important;  
-                    background: #fff;
-                    border: 1px solid #fff;
-                    box-shadow: 0px 11px 14px #9898981F;        
+            .nav-link {
+                padding: 9px 15px !important;
+                background: #fff;
+                border: 1px solid #fff;
+                box-shadow: 0px 11px 14px #9898981F;
             }
 
-            .details-multi{display: none;}
+            .details-multi {
+                display: none;
+            }
 
-        .multibtn{
-            display: flex;
-            padding: 5px 8px;
-            background: #fff;
-            margin-bottom:8px;
-            border: 1px solid #fff;
-            border-radius: 50px;
+            .multibtn {
+                display: flex;
+                padding: 5px 8px;
+                background: #fff;
+                margin-bottom: 8px;
+                border: 1px solid #fff;
+                border-radius: 50px;
 
-                .nav-link{    
+                .nav-link {
                     margin-bottom: 0px;
                     font-size: 13px;
                     padding: 5px 15px !important;
-                    box-shadow: 0px 11px 14px rgb(255 255 255 / 12%);                    
+                    box-shadow: 0px 11px 14px rgb(255 255 255 / 12%);
                 }
-                .details-multi{display: block;}
+
+                .details-multi {
+                    display: block;
+                }
 
             }
 
         }
 
-        
 
+        .impact-box-content-education {
+            background: #faf6ed;
+            border-radius: 25px;
+            margin-bottom: 20px;
+            min-height: 183px;
+            padding: 20px 20px;
+            position: relative;
+            transition: all .3s ease-in-out;
+
+            h2.heading-sm {
+                font-size: 23px;
+                margin-right: 0;
+            }
+        }
+
+        .blue-strip {
+            background: #113689;
+            padding: 15px 0;
+            margin-bottom: 20px;
+
+            .heading-sm1 {
+                color: #fff;
+                font-size: 20px;
+            }
+        }
+
+        .tab-text-infra {
+            font-size: 20px;
+            font-weight: bold;
+            color: #212121;
+
+            @media (max-width:1360px) and (min-width: 1024px) {
+                font-size: 14px;
+            }
+        }
 
     }
 
@@ -311,11 +363,11 @@
 .custmize-filter-column {
     position: fixed;
     right: 0;
-    bottom: 2%;
+    bottom: 10%;
     background: #fff;
-    min-height: 380px;
+    min-height: 500px;
     width: 350px;
-    padding: 20px 20px;
+    padding: 0;
     border-radius: 10px 0px 0px 10px;
     box-shadow: 0 10px 30px #0000001a;
     z-index: 9999999999999999999999999;
@@ -325,11 +377,11 @@
     transition: all 500ms ease-in-out;
 
     @media (max-width:1599px) and (min-width: 1361px) {
-        bottom: 2%;
+        bottom: 10%;
     }
 
     @media (max-width:1360px) and (min-width: 1024px) {
-        bottom: 2%;
+        bottom: 10%;
     }
 
     &.show {
@@ -403,21 +455,24 @@ th.report-name-width-50 {
     width: 70%;
 }
 
-.ag-theme-custom-height{
+.ag-theme-custom-height {
     // height: 600px;
-    margin-top:25px;
+    margin-top: 25px;
 }
 
 .ag-header-row.ag-header-row-column {
-    background: #113689;
-    border-color: #113689;
-    color: #ffffff !important;
-    font-weight: 500 !important;
+    background: #EBE9FA;
+    border-color: #EBE9FA;
+    color: #000 !important;
+    font-weight: 700 !important;
     padding: 12px 15px !important;
     white-space: nowrap;
-    // font-size: 14px !important;
+    font-size: 14px !important;
 }
-.ag-header-cell, .ag-header-group-cell, .ag-cell {
+
+.ag-header-cell,
+.ag-header-group-cell,
+.ag-cell {
     padding: 0px 11px !important;
 }
 
@@ -431,19 +486,26 @@ button.scroll-right-btn {
     display: inline-flex;
     align-items: center;
     margin-bottom: -10px;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
-.ag-header-cell:hover, .ag-tab{background: #113689 !important;}
+.ag-header-cell:hover {
+    background:#EBE9FA !important;
+}
 
-button.scroll-right-btn .material-icons-round{font-size: 60px;}
+button.scroll-right-btn .material-icons-round {
+    font-size: 60px;
+}
 
-button.scroll-right-btn:hover{
+button.scroll-right-btn:hover {
     background: #ffffff;
     color: #113689;
 }
 
-.ag-icon{color: #fff !important;cursor: pointer;}
+// .ag-icon {
+//     color: #fff !important;
+//     cursor: pointer;
+// }
 
 button.scroll-right-btn .material-icons-round {
     font-size: 35px;
@@ -457,27 +519,29 @@ button.scroll-right-btn .material-icons-round {
 // .ag-floating-bottom-viewport .ag-cell {
 //     text-align: right !important;
 // }
-.pinnedData{
-    background:#fff;
-    padding:7px 15px 20px;
+.pinnedData {
+    background: #fff;
+    padding: 7px 15px 20px;
     font-weight: 700;
     font-size: 13px;
     border-radius: 0 0 16px 16px;
 }
 
 .select-infra.button-group-filter select.form-select {
-    background: #e5e4e4;
+    background:#EBEBEB;
+    height: 40px;
     font-weight: 500;
     border: 0;
     font-size: 16px;
     appearance: auto;
-    padding: 10px 15px;
+    padding: 8px 15px;
     border-right: 12px solid transparent;
 
     option {
         background: #fff !important;
     }
 }
+
 img.dropicon {
     position: absolute;
     right: 20px;
@@ -489,27 +553,43 @@ img.dropicon {
     border-radius: 16px 16px 0 0;
 }
 
-.ag-header-cell::before{ background-color: #e2e2e200 !important;}
-.ag-row{border-bottom: transparent !important;}
-.ag-ltr .ag-cell{border-right: transparent !important;}
+.ag-header-cell::before {
+    background-color: #e2e2e200 !important;
+}
 
-.ag-row-animation .ag-row:nth-child(even){background:#F4F4F4;}
+.ag-row {
+    border-bottom: transparent !important;
+}
+
+.ag-ltr .ag-cell {
+    border-right: transparent !important;
+}
+
+.ag-row-animation .ag-row:nth-child(even) {
+    background: #F4F4F4;
+}
 
 
-.table-text-i button#uncontrolled-tab-example-tab-table{
- display: flex;
- align-items: center;
-&:before {
-    content: "";
-    background: url('../../assets/images/table_cells.png');
-    width: 15px;
-    height: 15px;
-    background-size: cover;
-    display: block;
-    margin-right: 6px;
-}}
+.table-text-i button#uncontrolled-tab-example-tab-table {
+    display: flex;
+    align-items: center;
 
-.option-hide{height: 0px !important; font-size: 0px !important;}
+    &:before {
+        content: "";
+        background: url('../../assets/images/table_cells.png');
+        width: 15px;
+        height: 15px;
+        background-size: cover;
+        display: block;
+        margin-right: 6px;
+    }
+}
+
+.option-hide {
+    height: 0px !important;
+    font-size: 0px !important;
+}
+
 .right-devider-icon {
     background: #FAFCFF;
     position: absolute;
@@ -528,6 +608,7 @@ img.dropicon {
         opacity: .5;
     }
 }
-#webpack-dev-server-client-overlay-div{
+
+#webpack-dev-server-client-overlay-div {
     display: none;
 }
