--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -528,6 +528,11 @@ img.dropicon {
         opacity: .5;
     }
 }
+// iframe{
+//     display: none !important;
+//     height: 0px;
+//     width: 0px;
+// }
 #webpack-dev-server-client-overlay-div{
-    display: none;
+    display: none !important;
 }
