--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -365,7 +365,7 @@
     right: 0;
     bottom: 10%;
     background: #fff;
-    min-height:290px;
+    min-height:250px;
     width: 350px;
     padding: 0;
     border-radius: 10px 0px 0px 10px;
@@ -377,11 +377,18 @@
     transition: all 500ms ease-in-out;
 
     @media (max-width:1599px) and (min-width: 1361px) {
-        bottom: 10%;
+        bottom: 11%;
+        width: 300px;
+        .search-box-div.mb-3 {
+            margin-bottom: 10px !important;
+        }
     }
 
     @media (max-width:1360px) and (min-width: 1024px) {
         bottom: 10%;
+        .search-box-div.mb-3 {
+            margin-bottom: 7px !important;
+        }
     }
 
     &.show {
