--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -132,7 +132,7 @@
                 padding: 8px 15px;
                 border-radius: 40px;
 
-                @media (max-width:1360px) and (min-width: 1024px) {                    
+                @media (max-width:1360px) and (min-width: 1024px) {
                     padding: 4px 9px !important;
                 }
             }
@@ -330,9 +330,48 @@
             transition: all .3s ease-in-out;
 
             h2.heading-sm {
-                font-size: 23px;
+                font-size: 26px;
                 margin-right: 0;
             }
+
+            .nav-tabs {
+                background: #FFFFFF;
+                padding: 5px 10px;
+
+                .nav-link.active {
+                    color: #fff;
+                    background-color: #113689;
+                    border-color: #113689;
+                }
+            }
+
+            .chart-left-text {
+                h2 {
+                    font-size: 28px;
+                    font-weight: 800;
+                      @media (max-width: 1599px) and (min-width: 1024px) {                       
+                            font-size: 20px !important;                      
+                       }
+                    }
+
+                h6 {
+                    font-size: 24px;
+                    font-weight: 500;
+                    margin-bottom: 0;  
+                    
+                    @media (max-width: 1599px) and (min-width: 1024px) {                       
+                        font-size: 20px !important;                      
+                   };
+                    
+                }
+            }
+
+            @media (max-width: 1399px) and (min-width: 1024px) {
+                .heading-sm {
+                    font-size: 20px !important;
+                }
+            }
+
         }
 
         .blue-strip {
@@ -365,7 +404,7 @@
     right: 0;
     bottom: 10%;
     background: #fff;
-    min-height:250px;
+    min-height: 250px;
     width: 350px;
     padding: 0;
     border-radius: 10px 0px 0px 10px;
@@ -379,6 +418,7 @@
     @media (max-width:1599px) and (min-width: 1361px) {
         bottom: 11%;
         width: 300px;
+
         .search-box-div.mb-3 {
             margin-bottom: 10px !important;
         }
@@ -386,6 +426,7 @@
 
     @media (max-width:1360px) and (min-width: 1024px) {
         bottom: 10%;
+
         .search-box-div.mb-3 {
             margin-bottom: 7px !important;
         }
@@ -497,7 +538,7 @@ button.scroll-right-btn {
 }
 
 .ag-header-cell:hover {
-    background:#EBE9FA !important;
+    background: #EBE9FA !important;
 }
 
 button.scroll-right-btn .material-icons-round {
@@ -535,7 +576,7 @@ button.scroll-right-btn .material-icons-round {
 }
 
 .select-infra.button-group-filter select.form-select {
-    background:#EBEBEB;
+    background: #EBEBEB;
     height: 40px;
     font-weight: 500;
     border: 0;
