--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1561,7 +1561,7 @@ h4.brudcrumb_heading {
     position: fixed;
     bottom: 2%;
     right: 2%;
-    z-index: 99999999999999999999999;
+    z-index: 9;
 
     span.material-icons-round {
         font-size: 40px;
