--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -409,7 +409,7 @@
     padding: 0;
     border-radius: 10px 0px 0px 10px;
     box-shadow: 0 10px 30px #0000001a;
-    z-index: 9999999999999999999999999;
+    z-index: 9;
     opacity: 0;
     transform-origin: right;
     transform: rotateY(90deg);
